[package]
name = "squeez"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squeez"
path = "src/main.rs"

[lib]
name = "squeez"
path = "src/lib.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
strip = true
lto = true
